Just throw them javafx libs in there
just...argh. setting this up is vexing to me.